--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,21 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.pritim.myapplication">
+    package="com.reyhanabbywahyu.medinet2">
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/icon_app"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/icon_app"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyApplication">
-        <activity android:name=".MainActivity">
+        android:theme="@style/Theme.Medinet2">
+        <activity android:name=".activity.Riwayat_Activity"></activity>
+        <activity android:name=".activity.Login_Activity" />
+        <activity android:name=".activity.Keranjang_Activity" />
+        <activity android:name=".activity.Detail_ObatActivity" />
+        <activity android:name=".activity.Toko_Obat_Activity" />
+        <activity android:name=".activity.Daftar_Activity" />
+        <activity android:name=".activity.UtamaActivity" />
+        <activity
+            android:name=".activity.MainActivity"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.Medinet2.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
